--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-left">
 					<li>
-						<a class="navbar-brand" href="#">
+						<a class="navbar-brand" href="index.html">
 							<span id="ac-logo-text">
 							<!--span class="glyphicon glyphicon-question-sign"id="ac-logo-glyphicon">
 							</span-->
@@ -34,7 +34,7 @@
 					<li>
 						<p class="navbar-text navbar-right ac-userbox">
 							<span class="ac-username">Name Vorname</span><br>
-							<a href="#">Settings</a>
+							<a href="login.html">Settings</a>
 							|
 							<a href="#">Logout</a>
 						</p>
@@ -77,7 +77,11 @@
 					<div class="ac-post-desc" id="ac-post-id-000">
 						<div class="ac-post-left">
 							<div class="ac-post-img">
-								<img src="graphic/avatar.png">
+								<img src="graphic/bender.png">
+
+								<div class="ac-post-author">
+									Bender
+								</div>
 
 								<div class="ac-post-updown" id="ac-post-updown-id-000">
 									<div class="input-group input-group-xs spinner">
@@ -102,7 +106,7 @@
 
 						<div class="ac-post-right">
 							<div class="ac-post-title">
-								<a class="ac-large" href="#">How to build a moon park?</a>
+								<a class="ac-large" href="question.html">How to build a moon park?</a>
 							</div>
 
 							<div class="ac-post-text">
@@ -125,7 +129,11 @@
 					<div class="ac-post-desc" id="ac-post-id-001">
 						<div class="ac-post-left">
 							<div class="ac-post-img">
-								<img src="graphic/avatar.png">
+								<img src="graphic/mrmailetz.png">
+
+								<div class="ac-post-author">
+									Mr. Skeltal
+								</div>
 
 								<div class="ac-post-updown" id="ac-post-updown-id-001">
 									<div class="input-group input-group-xs spinner">
@@ -150,20 +158,20 @@
 
 						<div class="ac-post-right">
 							<div class="ac-post-title">
-								<a class="ac-large" href="#">How to build a moon park?</a>
+								<a class="ac-large" href="#">How much calcium do I need?</a>
 							</div>
 
 							<div class="ac-post-text">
-								Guys, i have trouble with a moon park, Can't find th black-jack and hookers...
+								Calcium is essential for living organisms, particularly in cell physiology where movement of the calcium ion into and out of the cytoplasm functions as a signal for many cellular processes. As a major material used in mineralization of bone, teeth and shells, calcium is the most abundant metal by mass in many animals.
 							</div>
 
 							<div class="ac-post-down">
-								<a href="#" class="ac-post-answer">Answer(3)</a>
+								<a href="#" class="ac-post-answer">Answer(5)</a>
 								Tags: 
-								<a href="#" class="ac-post-tag">black-jack</a>
-								<a href="#" class="ac-post-tag">bender</a>
-								<a href="#" class="ac-post-tag">hookers</a>
-								<a href="#" class="ac-post-tag">futurama</a>
+								<a href="#" class="ac-post-tag">calcium</a>
+								<a href="#" class="ac-post-tag">skeleton</a>
+								<a href="#" class="ac-post-tag">spooky</a>
+								<a href="#" class="ac-post-tag">memes</a>
 							</div>
 						</div>
 					</div>
@@ -174,6 +182,10 @@
 						<div class="ac-post-left">
 							<div class="ac-post-img">
 								<img src="graphic/avatar.png">
+
+								<div class="ac-post-author">
+									8coon
+								</div>
 
 								<div class="ac-post-updown" id="ac-post-updown-id-002">
 									<div class="input-group input-group-xs spinner">
@@ -198,20 +210,19 @@
 
 						<div class="ac-post-right">
 							<div class="ac-post-title">
-								<a class="ac-large" href="#">How to build a moon park?</a>
+								<a class="ac-large" href="#">How to learn Bootstrap really fast</a>
 							</div>
 
 							<div class="ac-post-text">
-								Guys, i have trouble with a moon park, Can't find th black-jack and hookers...
+								Hey goys I really need to learn Bootstrap, CSS and HTML, the deadline is tomorrow...
 							</div>
 
 							<div class="ac-post-down">
-								<a href="#" class="ac-post-answer">Answer(3)</a>
+								<a href="#" class="ac-post-answer">Answer(0)</a>
 								Tags: 
-								<a href="#" class="ac-post-tag">black-jack</a>
-								<a href="#" class="ac-post-tag">bender</a>
-								<a href="#" class="ac-post-tag">hookers</a>
-								<a href="#" class="ac-post-tag">futurama</a>
+								<a href="#" class="ac-post-tag">bootstrap</a>
+								<a href="#" class="ac-post-tag">css</a>
+								<a href="#" class="ac-post-tag">html</a>
 							</div>
 						</div>
 					</div>
