--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
 			<div id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-left">
 					<li>
-						<a class="navbar-brand" href="#">
+						<a class="navbar-brand" href="index.html">
 							<span id="ac-logo-text">
 							<!--span class="glyphicon glyphicon-question-sign"id="ac-logo-glyphicon">
 							</span-->
@@ -31,9 +31,9 @@
 					<li>
 						<p class="navbar-text navbar-right ac-userbox">
 							<span class="ac-username">You are not logged in!</span><br>
-							<a href="#">Log in</a>
+							<a href="login.html">Log in</a>
 							|
-							<a href="#">Sign up</a>
+							<a href="signup.html">Sign up</a>
 						</p>
 					</li>
 				</ul>
