--- a/ask.html
+++ b/ask.html
@@ -16,7 +16,7 @@
 			<div id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-left">
 					<li>
-						<a class="navbar-brand" href="#">
+						<a class="navbar-brand" href="index.html">
 							<span id="ac-logo-text">
 							<!--span class="glyphicon glyphicon-question-sign"id="ac-logo-glyphicon">
 							</span-->
@@ -34,7 +34,7 @@
 					<li>
 						<p class="navbar-text navbar-right ac-userbox">
 							<span class="ac-username">Name Vorname</span><br>
-							<a href="#">Settings</a>
+							<a href="login.html">Settings</a>
 							|
 							<a href="#">Logout</a>
 						</p>
