--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 							</div>
 
 							<div class="ac-post-text">
-								Hey goys I really need to learn Bootstrap, CSS and HTML, the deadline is tomorrow...
+								Hey goys I really need to learn Bootstrap, CSS and HTML fast, deadline is tomorrow...
 							</div>
 
 							<div class="ac-post-down">
